creation classe utilisateur

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=projetScriptoria
+sping.datasource.url=jdbc:mysql://localhost:3310/scriptoria
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=
+spring.jpa.show-sql=true 
+
+#spring.data.mongodb.authentication-database=racolmongodb
+#spring.data.mongodb.username=usermongodb
+#spring.data.mongodb.password=motdepasse
+#spring.data.mongodb.database=racolmongodb
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
