ajout de spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=projetScriptoria
-sping.datasource.url=jdbc:mysql://localhost:3310/scriptoria
+spring.datasource.url=jdbc:mysql://localhost:3306/scriptoria
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=
+spring.datasource.password=P@ssw0rd
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true 
 
 #spring.data.mongodb.authentication-database=racolmongodb
