--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.show-sql=true
 #spring.data.mongodb.database=racolmongodb
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.host=localhost
+
+# spring.data.mongodb.uri=mongodb://localhost:27017/scriptoria
+# spring.data.mongodb.database=scriptoria
+# server.port=8080
