debug des warnings et creation du projectController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,34 @@
-spring.application.name=projetScriptoria
+# Chaque ligne de configuration permet d'adapter le comportement de Spring Boot pour répondre aux besoins spécifiques de ton application.
+# =======================================================================================================================================
+
+# Nom de l'application, utilisé notamment dans les logs et pour l'identification globale de l'application.
+spring.application.name=projetScriptoria 
+
+# URL de connexion à la base de données MySQL :
+# "localhost" indique que la base est sur la machine locale,
+# "3306" est le port par défaut pour MySQL,
+# "scriptoria" est le nom de la base de données.
 spring.datasource.url=jdbc:mysql://localhost:3306/scriptoria
+
+# Nom d'utilisateur pour se connecter à la base de données.
 spring.datasource.username=root
+
+# Mot de passe associé à l'utilisateur de la base de données.
 spring.datasource.password=P@ssw0rd
-spring.jpa.hibernate.ddl-auto=none
+
+# Configuration de la gestion automatique du schéma de la base de données par Hibernate.
+# "none" signifie qu'aucune action (création, mise à jour, etc.) ne sera effectuée sur le schéma.
+# Autres options possibles : update, create, create-drop, validate.
+spring.jpa.hibernate.ddl-auto=create
+
+# Affiche dans la console les requêtes SQL générées par Hibernate, ce qui est utile pour le débogage.
 spring.jpa.show-sql=true 
+
+# Contrôle la durée de vie de la session Hibernate durant le cycle de requête.
+# false indique que la session se ferme à la fin de la transaction, ce qui évite des chargements "lazy" inattendus pendant le rendu de la vue.
+# Attention : cela oblige à charger toutes les données nécessaires en amont dans la couche service.
+spring.jpa.open-in-view=false
+
 
 #spring.data.mongodb.authentication-database=racolmongodb
 #spring.data.mongodb.username=usermongodb
