--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.password=P@ssw0rd
 # Configuration de la gestion automatique du schéma de la base de données par Hibernate.
 # "none" signifie qu'aucune action (création, mise à jour, etc.) ne sera effectuée sur le schéma.
 # Autres options possibles : update, create, create-drop, validate.
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Affiche dans la console les requêtes SQL générées par Hibernate, ce qui est utile pour le débogage.
 spring.jpa.show-sql=true 
@@ -29,6 +29,9 @@ spring.jpa.show-sql=true
 # Attention : cela oblige à charger toutes les données nécessaires en amont dans la couche service.
 spring.jpa.open-in-view=false
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 #spring.data.mongodb.authentication-database=racolmongodb
 #spring.data.mongodb.username=usermongodb
